--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nj-portfolio",
+  "homepage": "https://nirajjha.com.np",
   "private": true,
   "version": "0.0.0",
   "type": "module",
